2018_2_객프/10/compiling_error.txt
/Users/parkjungjin/C++/2018_2_객프/10/lab9_1.cpp:58:13: error: expected expression
  s1.p_list={1,2,3,4,5};
            ^
1 error generated.
